# proofmark

./: .env  .env.dev  .env.example  .gitignore  .prettierignore  README.md  biome.json  docker-compose.yml  drizzle.config.ts  eslint.config.js  eslint.config.mjs  next.config.js  package-lock.json  package.json  platform.config.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/: pull_request_template.md
cli/: index.ts  proofmark
config/: repo-policy.mjs
contracts/: ProofmarkHashAnchor.sol  ProofmarkSubscription.sol  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
docker/: Dockerfile  docker-compose.yml
docs/: CONTRIBUTING.md  forensic-tape-format.md  oss-structure.md
drizzle/: 0000_flashy_dakota_north.sql  0001_loving_lenny_balinger.sql  0002_spotty_eddie_brock.sql  0003_confused_captain_america.sql  0004_unify_identity_accounts.sql  0005_ai_runtime.sql  0006_better_auth_sessions_sync.sql  0007_proofmark_two_factors_billing.sql  0008_proofmark_two_factor_flag.sql  0009_hybrid_signing_imports.sql
premium/: index.ts
rust-service/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.deploy  run.sh
rust-service/benches/: pdf_bench.rs
rust-service/crates/forensic-core/: Cargo.toml
rust-service/crates/forensic-core/src/: analysis.rs  codec.rs  container.rs  controller.rs  format.rs  lib.rs  playback.rs  scene.rs
rust-service/src/: lib.rs  main.rs
rust-service/src/api/: audit.rs  collab.rs  crypto.rs  error.rs  forensic.rs  index.rs  mod.rs  pdf.rs  pq.rs  pqcrypto.rs  qr.rs  types.rs  verify.rs  zk.rs
rust-service/src/audit/: mod.rs
rust-service/src/collab/: awareness.rs  crdt.rs  mod.rs  protocol.rs  room.rs  sync.rs  ws.rs
rust-service/src/crypto/: aes.rs  hash.rs  mod.rs
rust-service/src/forensic/: anomaly.rs  format.rs  mod.rs  replay.rs
rust-service/src/forensic/replay/: anomalies.rs  decode.rs  mod.rs  types.rs  validate.rs
rust-service/src/index/: ai.rs  bk_tree.rs  encrypted.rs  engine.rs  inverted.rs  mod.rs  privacy.rs  queue.rs  scanner.rs  store.rs  trie.rs
rust-service/src/index/features/: ai.rs  encrypted.rs  mod.rs  privacy.rs  queue.rs  scanner.rs
rust-service/src/index/search/: bk_tree.rs  inverted.rs  mod.rs  tokenizer.rs  trie.rs
rust-service/src/index/store/: keys.rs  mod.rs
rust-service/src/pdf/: analyze.rs  generate.rs  mod.rs
rust-service/src/pdf/analyze/: acroform.rs  fields.rs  mod.rs  patterns.rs  signers.rs  structure.rs  types.rs  util.rs  wallets.rs
rust-service/src/pdf/edit/: fill.rs  flatten.rs  mod.rs  template.rs  types.rs
rust-service/src/pdf/generate/: content.rs  draw.rs  fields.rs  mod.rs  sections.rs  theme.rs  types.rs
rust-service/src/pq/: encrypt.rs  mod.rs
rust-service/src/pqcrypto/: encrypt.rs  mod.rs  zkproof.rs
rust-service/src/qr/: mod.rs
rust-service/src/util/: b64.rs  encoding.rs  mod.rs  patterns.rs  varint.rs
rust-service/src/verify/: bitcoin.rs  encoding.rs  evm.rs  mod.rs  solana.rs  varint.rs
rust-service/src/verify/bitcoin/: bip322.rs  legacy.rs  message.rs  mod.rs  witness.rs
rust-service/src/zk/: mod.rs  proof.rs
scripts/: benchmark-pdf-analysis.ts  create-automation-review-contract.ts  create-eye-tracking-test-contract.ts  create-nda-demo.ts  push-oss.sh  (+28 more)
(+555 files in other folders)
