[package]
name = "forensic-core"
version = "0.1.0"
edition = "2021"
description = "Shared deterministic forensic replay codec for native Rust and browser WASM"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
wasm = ["dep:serde-wasm-bindgen", "dep:wasm-bindgen"]

[dependencies]
base64 = "0.22"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
